--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,13 +1,17 @@
+name = quantastic
 release = 0.0.
 commit = $(shell git describe --tags --dirty --always)
 gopath = $(shell go env GOPATH)
 distdir = dist
 
-dist:
+dist: client server
+
+client server:
 	go install \
 		-ldflags "-X main.buildRelease 0.0.0 -X main.buildCommit $(commit)" \
-		github.com/felixge/quantastic/backend/cmd/quantastic
+		github.com/felixge/$(name)/backend/cmd/$(name)-$@
 	mkdir -p "$(distdir)"
-	mv "$(gopath)/bin/quantastic" "$(distdir)"
+	mv "$(gopath)/bin/$(name)-$@" "$(distdir)"
 
-.PHONY: dist
+
+.PHONY: dist client server
